infra/ingress/bootstrap-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: kafka
    platform.confluent.io/namespace: confluent
    platform.confluent.io/type: kafka
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: kafka-bootstrap
  namespace: confluent
  labels:
    confluent-platform: "true"
    cr-name: kafka
    type: kafka
spec:
  ports:
    - name: external
      port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app: kafka
    clusterId: confluent
    confluent-platform: "true"
    type: kafka
  sessionAffinity: None
  type: ClusterIP
