infra/ingress/ingress-monitoring.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-monitoring
  namespace: monitoring
  annotations:    
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #     - grafana.confluent.demo.com
  rules:    
    - host: prometheus.confluent.demo.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: prometheus-server
              port:
                number: 80
    - host: grafana.confluent.demo.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: grafana
              port:
                number: 80
